DigicielFull/force-app/main/default/objects/Job_Card__c/fields/Job_Card_Record_Location_in_Sharepoint__c.field-meta.xml
<CustomField>
    <fullName>Job_Card_Record_Location_in_Sharepoint__c</fullName>
    <label>Job Card Record Location in Sharepoint</label>
    <length>150</length>
    <type>Text</type>
</CustomField>